--- a/colab_train.ipynb
+++ b/colab_train.ipynb
@@ -10,6 +10,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Relevant imports"
    ]
@@ -457,7 +462,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I1208 22:42:02.167845 275451328 ResourceManager.cpp:950] Importing Basis files as BC3\n"
+      "I1208 22:42:02.167845 275451328 ResourceManager.cpp:950] Importing Basis files as BC3\n",
+      "I1208 22:42:06.964015 275451328 ResourceManager.cpp:302] ResourceManager::loadStage : Not loading semantic mesh\n",
+      "W1208 22:42:06.964184 275451328 Simulator.cpp:235] :\n",
+      "---\n",
+      " The active scene does not contain semantic annotations. \n",
+      "---\n",
+      "Process ForkServerProcess-1:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/renard/miniconda3/envs/vis/lib/python3.7/multiprocessing/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/renard/miniconda3/envs/vis/lib/python3.7/multiprocessing/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat/core/vector_env.py\", line 188, in _worker_env\n",
+      "    env = env_fn(*env_fn_args)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat_baselines/common/env_utils.py\", line 33, in make_env_fn\n",
+      "    env = env_class(config=config, dataset=dataset)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat_baselines/common/environments.py\", line 42, in __init__\n",
+      "    super().__init__(self._core_env_config, dataset)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat/core/env.py\", line 334, in __init__\n",
+      "    self._env = Env(config, dataset)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat/core/env.py\", line 105, in __init__\n",
+      "    id_sim=self._config.SIMULATOR.TYPE, config=self._config.SIMULATOR\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat/sims/registration.py\", line 19, in make_sim\n",
+      "    return _sim(**kwargs)\n",
+      "  File \"/Users/renard/Documents/etudes/EPFLMA3/VisInt/Project/repo/habitat-api/habitat/sims/habitat_simulator/habitat_simulator.py\", line 324, in __init__\n",
+      "    super().__init__(self.sim_config)\n",
+      "  File \"<attrs generated init habitat_sim.simulator.Simulator>\", line 9, in __init__\n",
+      "    self.__attrs_post_init__()\n",
+      "  File \"/Users/renard/miniconda3/envs/vis/lib/python3.7/site-packages/habitat_sim/simulator.py\", line 100, in __attrs_post_init__\n",
+      "    self.__set_from_config(self.config)\n",
+      "  File \"/Users/renard/miniconda3/envs/vis/lib/python3.7/site-packages/habitat_sim/simulator.py\", line 212, in __set_from_config\n",
+      "    self._config_backend(config)\n",
+      "  File \"/Users/renard/miniconda3/envs/vis/lib/python3.7/site-packages/habitat_sim/simulator.py\", line 149, in _config_backend\n",
+      "    super().__init__(config.sim_cfg)\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
